--- a/help.html
+++ b/help.html
@@ -49,6 +49,7 @@
             IDを知っている方は、ルーム参加よりルームに参加してください。ルーム作成者がゲームを開始するまでお待ちください。
             <li>ゲームの開始</li>
             ルーム参加者が３人以上になったらゲーム開始ができます。ゲーム開始ボタンより、ゲームをはじめてください。
+            お題を自動で決定することもできます。300以上のお題からランダムに決まります。
             <li>ゲームルール</li>
             順番はランダムに決まります。最初の方はお題を決め、お題の絵を描いて次の人へ回してください。<br>
             以降の人は前の人が描いた絵を参考に、絵を描いてください。<br>
@@ -63,7 +64,6 @@
         <ul>
             <li>推奨環境</li>
             パソコンまたはスマートフォンでご利用ください。（フィーチャーフォンは対応しておりません）<br>
-            動作確認済ブラウザ：GoogleChrome/Safari 
         </ul>
         <p>注意事項・免責事項</p>
         <ul>
@@ -82,12 +82,13 @@
             <li>準拠法及び管轄裁判所</li>
             当サイトの利用ならびに当サイトの内容の解釈については、日本国の法律を準拠法とします。また、このサイトに関わる全ての紛争については、日本国の東京地方裁判所を第一審の専属管轄裁判所とします。
         </ul>
+        <br>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <footer class="fixed-bottom navbar navbar-expand-sm" style="position: absolute; background-color: #42aaf5;">
-        <font color="#FFFFFF">Copyright © 2020 KosukeYamazaki All Right Reserved.</font>
+        <font color="#FFFFFF">Copyright © 2020 <a href="https://github.com/kochan69/drawmessenger">KosukeYamazaki</a> All Right Reserved.</font>
     </footer>
 </body>
 </html>
