--- a/index.html
+++ b/index.html
@@ -46,18 +46,19 @@
         <ul>
             <li>ご利用について</li>
             ご利用は完全無料です。
-            <li>対応ブラウザについて</li>
-            最新の主要ブラウザでご利用が可能です。
-            詳細は<a href="http://drawmessenger.com/help">HELP</a>をご確認ください。
+            <li>対応環境について</li>
+            HTML5/CSS3/JavaScript/WebSocket　に対応したブラウザで利用可能です。
+            <li>遊び方</li>
+            <a href="http://drawmessenger.com/help">HELP</a>をご確認ください。
             <li>メンテナンス時間</li>
-            毎日5:00 ~ 5:10 はシステムメンテナンスのためご利用いただけません。
+            毎日5:00 ~ 5:01 はシステムメンテナンスのためご利用いただけません。
         </ul>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <footer class="fixed-bottom navbar navbar-expand-sm" style="position: absolute; background-color: #42aaf5;">
-        <font color="#FFFFFF">Copyright © 2020 KosukeYamazaki All Right Reserved.</font>
+        <font color="#FFFFFF">Copyright © 2020 <a href="https://github.com/kochan69/drawmessenger">KosukeYamazaki</a> All Right Reserved.</font>
     </footer>
 </body>
 </html>
