--- a/roomSlave.html
+++ b/roomSlave.html
@@ -273,7 +273,7 @@
         }, false);
     </script>
     <footer class="fixed-bottom navbar navbar-expand-sm" style="position: absolute; background-color: #42aaf5;">
-        <font color="#FFFFFF">Copyright © 2020 KosukeYamazaki All Right Reserved.</font>
+        <font color="#FFFFFF">Copyright © 2020 <a href="https://github.com/kochan69/drawmessenger">KosukeYamazaki</a> All Right Reserved.</font>
     </footer>
 </body>
 </html>
