--- a/make.html
+++ b/make.html
@@ -60,7 +60,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <footer class="fixed-bottom navbar navbar-expand-sm" style="position: absolute; background-color: #42aaf5;">
-        <font color="#FFFFFF">Copyright © 2020 KosukeYamazaki All Right Reserved.</font>
+        <font color="#FFFFFF">Copyright © 2020 <a href="https://github.com/kochan69/drawmessenger">KosukeYamazaki</a> All Right Reserved.</font>
     </footer>
 </body>
 </html>
