--- a/index.html
+++ b/index.html
@@ -53,8 +53,11 @@
             <li>メンテナンス時間</li>
             毎日5:00 ~ 5:01 はシステムメンテナンスのためご利用いただけません。
         </ul>
-        <img src="http://drawmessenger.com/static/SH_G.jpg" width="300" height="300">
+        <div style="text-align: center;">
+            <img src="https://drive.google.com/uc?export=view&id=1i545RJkQrbf_JehYqj89agzSXSYElvsP" width="300" height="300">
+        </div>
         <p>このWebサービスは、新型コロナウイルスによる外出自粛を踏まえ自宅で楽しく過ごすための一助となるよう開発したものです。</p>
+        <br>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
