--- a/result.html
+++ b/result.html
@@ -40,7 +40,7 @@
         </div>
     </nav>
     <div id="main" class="container">
-        <h2>しりとり結果</h2>
+        <h2>伝言ゲーム結果</h2>
         <h5>お題：replaceTitle</h5>
         <h5>回答：replaceReply</h5>
         <form name="nextform" action="http://drawmessenger.com/server" method="POST">
