--- a/roomSlave.html
+++ b/roomSlave.html
@@ -88,7 +88,7 @@
             </div>
         </div>
         <div id="lastform" style="display: none;">
-            <p>しりとりが終わりました。結果を確認してみましょう！</p>
+            <p>伝言ゲームが終わりました。結果を確認してみましょう！</p>
             <form action="http://drawmessenger.com/server" method="POST">
                 <input type="hidden" name="type" value="result">
                 <input type="hidden" id="hiddenId" name="id" value="">
