--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         </ul>
         <div style="text-align: center;">
             <img src="https://drive.google.com/uc?export=view&id=1i545RJkQrbf_JehYqj89agzSXSYElvsP" width="300" height="300">
+            <br>
+            (画像転載・引用元：<a href="https://www.koho.metro.tokyo.lg.jp/diary/news/stay_home.html#tanosimi"> 東京都公式HP</a>)
         </div>
         <p>このWebサービスは、新型コロナウイルスによる外出自粛を踏まえ自宅で楽しく過ごすための一助となるよう開発したものです。</p>
         <br>
