--- a/roomSlave.html
+++ b/roomSlave.html
@@ -84,7 +84,7 @@
                         style="border: 3px solid #000000; max-width: 100%;">
                     </canvas>
                     <br>
-                    <button id="clear" class="btn btn-warning">全てクリア</button>
+                    <button id="clear" class="btn btn-warning">クリア</button>
                     <button id="ok" class="btn btn-info">次の人へ</button>
                 </div>
             </div>
