--- a/roomMaster.html
+++ b/roomMaster.html
@@ -86,14 +86,14 @@
                         style="border: 3px solid #000000; max-width: 100%;">
                     </canvas>
                     <br>
-                    <button id="clear" class="btn btn-warning">全てクリア</button>
+                    <button id="clear" class="btn btn-warning">クリア</button>
                     <button id="ok" class="btn btn-info">次の人へ</button>
                 </div>
             </div>
             <div style="text-align: center;">
                 <div id="answer" style="display: none;">
-                    答えは：<textarea id="answerText" rows="1" cols="20" maxlength="10"></textarea>
-                    <button id="ans" class="btn btn-success">回答を送信</button>
+                    答え<textarea id="answerText" rows="1" cols="20" maxlength="10"></textarea>
+                    <button id="ans" class="btn btn-success">送信</button>
                 </div>
             </div>
         </div>
