--- a/help.html
+++ b/help.html
@@ -41,7 +41,7 @@
     </nav>
     <div id="main" class="container">
         <br>
-        <p>絵しりとりのルール</p>
+        <p>お絵かき伝言ゲームの遊び方</p>
         <ul>
             <li>ルーム作成</li>
             まずはルーム作成より、ルームを作成してください。作成後、IDが発行されますので一緒に遊ぶお友だちに共有してください。
@@ -56,7 +56,8 @@
             最後の人は、前の人が描いた絵から、お題を回答してください。
             <li>ゲームの制約</li>
             参加者が途中で抜けてしまった・接続が切れてしまった場合にはゲームを続けることはできません。<br>
-            その場合には、ルーム作成からやり直してください。
+            その場合には、ルーム作成からやり直してください。<br>
+            また、ルームに同じユーザ名がいる場合は正しくゲーム進行ができません。
             <li>続けてゲームを行う</li>
             ゲーム終了後、続けてゲームを行うことができます。ただし、ルーム作成者が退室をした場合にはゲームを続けることはできません。
         </ul>
